--- a/my-money-app/frontend/package.json
+++ b/my-money-app/frontend/package.json
@@ -1,42 +1,30 @@
 {
-  "name": "my-money-frontend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "webpack-dev-server --progress --colors --inline --hot",
-    "production": "webpack --progress -p"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "admin-lte": "2.3.6",
-    "axios": "0.15.3",
-    "babel-core": "6.22.1",
-    "babel-loader": "6.2.10",
-    "babel-plugin-react-html-attrs": "2.0.0",
-    "babel-plugin-transform-object-rest-spread": "6.22.0",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-react": "6.22.0",
-    "css-loader": "0.26.1",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.9.0",
+  "name": "frontend2",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "admin-lte": "2.3.11",
+    "axios": "0.17.1",
     "font-awesome": "4.7.0",
-    "ionicons": "3.0.0",
-    "lodash": "4.17.4",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
-    "react-redux": "4.4.6",
-    "react-redux-toastr": "4.4.2",
-    "react-router": "3.0.2",
-    "redux": "3.6.0",
-    "redux-form": "6.4.1",
-    "redux-multi": "0.1.12",
-    "redux-promise": "0.5.3",
-    "redux-thunk": "2.1.0",
-    "style-loader": "0.13.1",
-    "webpack": "1.14.0",
-    "webpack-dev-server": "1.16.2"
+    "ionicons": "^3.0.0",
+    "jquery": "2.2.3",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-redux": "^5.0.6",
+    "react-redux-toastr": "^7.1.6",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
+    "react-scripts": "1.0.17",
+    "redux": "^3.7.2",
+    "redux-form": "^7.2.0",
+    "redux-multi": "^0.1.12",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
