--- a/my-money-app/backend/package.json
+++ b/my-money-app/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "dotenv": "^8.2.0",
     "express": "^4.14.0",
     "express-query-int": "^1.0.1",
     "mongoose": "^4.7.0",
