--- a/my-money-app/frontend/package.json
+++ b/my-money-app/frontend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --progress --colors --inline --hot",
-    "production": "webpack --progress -p"
+    "production": "webpack --progress -p",
+    "format": "eslint src/*.js src/**/*.js src/*.jsx src/**/*.jsx --fix"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,8 @@
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
     "css-loader": "0.26.1",
+    "eslint": "^6.7.2",
+    "eslint-plugin-react": "^7.17.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "font-awesome": "4.7.0",
