--- a/my-money-app/frontend/package.json
+++ b/my-money-app/frontend/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
     "css-loader": "0.26.1",
+    "dotenv-webpack": "^1.7.0",
     "eslint": "^6.7.2",
     "eslint-plugin-react": "^7.17.0",
     "extract-text-webpack-plugin": "1.0.1",
@@ -47,5 +48,6 @@
     "hooks": {
       "pre-push": "npm run format"
     }
-  }
+  },
+  "dependencies": {}
 }
